update reasons for conditions

--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.bib
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.bib
@@ -375,4 +375,13 @@ squares (NIPALS) approach},
   publisher={ACM}
 }
 
+@article{mazumder2010spectral,
+  title={Spectral regularization algorithms for learning large incomplete matrices},
+  author={Mazumder, Rahul and Hastie, Trevor and Tibshirani, Robert},
+  journal={Journal of machine learning research},
+  volume={11},
+  number={Aug},
+  pages={2287--2322},
+  year={2010}
+}
 
