--- a/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.bib
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.bib
@@ -318,3 +318,31 @@
   publisher={The Institute of Mathematical Statistics and the Bernoulli Society}
 }
 
+@article{vaiter2012degrees,
+  title={The degrees of freedom of the group lasso},
+  author={Vaiter, Samuel and Deledalle, Charles and Peyr{\'e}, Gabriel and Fadili, Jalal and Dossal, Charles},
+  journal={arXiv preprint arXiv:1205.1481},
+  year={2012}
+}
+
+@article{yuan2006model,
+  title={Model selection and estimation in regression with grouped variables},
+  author={Yuan, Ming and Lin, Yi},
+  journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  volume={68},
+  number={1},
+  pages={49--67},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+
+@article{mazumder2010spectral,
+  title={Spectral regularization algorithms for learning large incomplete matrices},
+  author={Mazumder, Rahul and Hastie, Trevor and Tibshirani, Robert},
+  journal={Journal of machine learning research},
+  volume={11},
+  number={Aug},
+  pages={2287--2322},
+  year={2010}
+}
+
