--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
@@ -239,7 +239,7 @@ We can plug \eqref{implicitDifferentiation} into \eqref{chainrule} to get $\nabl
 
 
 \subsection{Nonsmooth Training Criterion}
-When the penalized training criterion in the joint optimization problem is not smooth, gradient descent cannot be directly applied. Nonetheless, we find that in many problems, the solution $\hat{\boldsymbol \theta}\left(\boldsymbol{\lambda}\right)$ is smooth at almost every $\boldsymbol{\lambda}$ (eg. Lasso, Group Lasso, Trend Filtering); this means that we can indeed apply gradient descent in practice. In this section, we characterize these problems that are almost everywhere smooth. In addition, we provide a solution for deriving $\frac{\partial}{\partial \boldsymbol{\lambda}} \hat{\boldsymbol \theta}(\boldsymbol{\lambda})$ since calculating the gradient is a challenge in and of itself. This is then incorporated into an algorithm for tuning $\boldsymbol{\lambda}$ using gradient descent.
+When the penalized training criterion in the joint optimization problem is not smooth, gradient descent cannot be directly applied. Nonetheless, we find that in many problems, the solution $\hat{\boldsymbol \theta}\left(\boldsymbol{\lambda}\right)$ is smooth at almost every $\boldsymbol{\lambda}$ (eg. Lasso, Group Lasso, Trend Filtering \textcolor{red}{cite again!}); this means that we can indeed apply gradient descent in practice. In this section, we characterize these problems that are almost everywhere smooth. In addition, we provide a solution for deriving $\frac{\partial}{\partial \boldsymbol{\lambda}} \hat{\boldsymbol \theta}(\boldsymbol{\lambda})$ since calculating the gradient is a challenge in and of itself. This is then incorporated into an algorithm for tuning $\boldsymbol{\lambda}$ using gradient descent.
 
 To characterize problems that are almost everywhere smooth, we begin with three definitions:
 \begin{definition}
@@ -619,19 +619,17 @@ The Hessian $\boldsymbol H(\boldsymbol \lambda)$ and the matrix $\boldsymbol C(\
 
 \subsubsection{Low-Rank Matrix Completion}\label{sec:matrix_completion}
 
-In this example, we move away from the simple regression framework and consider matrix-valued data with partially observed entries. The goal in matrix-completion problems is to reconstruct the rest of the matrix. There are many applications where such problems come up, including collaborative filtering \citet{netflix} and robust principle components analysis \citet{candes2011robust}. 
+In this example, we move away from the simple regression framework and consider matrix-valued data with partially observed entries. The goal in these \emph{so called} matrix-completion problems is to reconstruct the rest of the matrix based on structural assumptions of the matrix. There are many applications where such problems come up, including collaborative filtering \citet{netflix} and robust principle components analysis \citet{candes2011robust}. 
 %In collaborative filtering problems, the goal is to infer user ratings on products given user ratings on a subset of the products \citet{netflix}. In robust principal components analysis, we decompose the observed matrix into a low-rank matrix and a sparse ``noise'' matrix \citet{candes2011robust}. 
-These problems often try to find low-rank matrix representations by minimizing the nuclear norm $\|\cdot \|_*$ \citep{fazel2002matrix, srebro2004learning}. The nuclear norm is non-smooth since it is the $\ell_1$ norm of the singular values.
+In these problems it is popular to assume a low rank structure and reconstruct the matrix by minimizing a penalized loss with a nuclear norm penalty $\|\cdot \|_*$ \citep{fazel2002matrix, srebro2004learning}. The nuclear norm -- the sum of the singular values of a matrix -- is the matrix-variate analog to the lasso. It is non-smooth function and employing it as a penalty results in estimates that are low rank (many $0$ singular values).
 
-In this example, we have a matrix-completion problem with additional information in the form of feature vectors for the rows and columns. We suppose that the matrix is the sum of row and column effects as well as an interaction matrix. Suppose the row and column effects are linear functions of the row and column feature vectors, respectively. \citep{fithian2013scalable} solves this problem with three penalty parameters -- one for the nuclear norm on the interaction matrix and one for each of the penalty functions on the row and column coefficients. Here we have row and column feature groups, and we would like to recover a sparse set of groups using group lasso penalties.
+There are several extensions to the matrix completion problem that allow one to incorporate additional information. We consider the work of \citet{fithian2013scalable}: Their formulation supposes one has additional covariates for each row and column, and models each entry of the matrix as a combination of a low rank effect, and a linear function of the corresponding column and row covariates. The attack this by posing a penalized loss; with both a nuclear norm penalty, and penalties on both the column and row coefficients. We consider jointly tuning all penalty parameters, and in particular use a combination of Lasso, Group-Lasso, Ridge, and nuclear norm penalties \textcolor{red}{(is this right?)}
 
-The exact problem setup is as follows. Suppose we are performing matrix-completion for the matrix $M \in \mathbb{R}^{N\times N}$. Let $X\in \mathbb{R}^{N \times p}$ be the feature vectors for the rows and $Z \in \mathbb{R}^{N \times p}$ be the feature vectors for columns.
-Suppose the matrix is the sum of linear functions of the row and column features, interaction matrix $\Gamma$, and noise $\epsilon$:
+More specifically, we consider an outcome matrix $M \in \mathbb{R}^{N\times N}$. Let $X\in \mathbb{R}^{N \times p}$ be the feature vectors for the rows and $Z \in \mathbb{R}^{N \times p}$ be the feature vectors for columns. We assume $M$ is of the form
 \begin{equation}
 M_{ij} = x_i \alpha + z_j \beta + \Gamma_{ij} + \epsilon_{ij}
 \end{equation}
-
-Let the observed matrix positions in training and validation sets be denoted $T$ and $V$. $\| \cdot \|^2_T$ denotes the Frobenius norm over the entries in $T$ and similarly for $\| \cdot \|^2_V$. In addition, suppose the row and column features are composed of $G$ groups. We partition the row and column coefficient vectors $\boldsymbol{\alpha}$ and $\boldsymbol{\beta}$ into $\boldsymbol{\alpha}^{(g)}$ and $\boldsymbol{\beta}^{(g)}$ for groups $g=1,...,G$. 
+with $\epsilon$ iid errors. Of this matrix $M$, we only observe some subset of the positions. Let the observed matrix positions be partitioned into a training set $T$, and a validation set $V$. Let $\| \cdot \|^2_T$ denote the Frobenius norm over the entries in $T$ and similarly define $\| \cdot \|^2_V$. In addition, suppose the row and column features are composed of $G$ groups \textcolor{red}{$G$ groups each or total? Why might we have groups? This needs a clear concise sentence of motivation? It looks like you have the same groups for rows and columns. Why would we have that?}. We partition the row and column coefficient vectors $\boldsymbol{\alpha}$ and $\boldsymbol{\beta}$ into $\boldsymbol{\alpha}^{(g)}$ and $\boldsymbol{\beta}^{(g)}$ for groups $g=1,...,G$. 
 
 We are interested in finding the optimal regularization parameters $\boldsymbol{\lambda} = (\lambda_0, \lambda_1, ...,  \lambda_{2G})^\top$. The joint optimization problem is formulated as follows.
 \begin{equation}
@@ -676,7 +674,7 @@ i | \text{index } i \text{ in } \boldsymbol{\alpha}^{(g)} \text{ where }
 \hat{\boldsymbol{\alpha}}^{(g)}(\boldsymbol{\lambda}) \ne \boldsymbol{0} \text{ for } g=1,...,G
 \})
 $$ 
-The differentiable space for $\boldsymbol{\beta}$, denoted $span(\boldsymbol{I}_{\boldsymbol{I}_c(\boldsymbol\lambda)})$, is defined similarly. The differentiable space for $\Gamma$ is the set of all matrices that have the same rank. This follows from the fact that the nuclear norm is a lasso penalty over the singular values. For more details, refer to the appendix. Putting this together, we have
+The differentiable space for $\boldsymbol{\beta}$, denoted $span(\boldsymbol{I}_{\boldsymbol{I}_c(\boldsymbol\lambda)})$, is defined similarly. The differentiable space for $\Gamma$ is the set of all matrices that have the same rank \textcolor{red}{(That have the same rank as $\Gamma$? Can we move in all those directions? I don't think we can, I think we need the singular vectors to actually be a smooth perturbation of the singular vectors of $\Gamma$)}. This follows from the fact that the nuclear norm is a lasso penalty over the singular values \textcolor{red}{(this isn't really a "fact"... are you giving the intuition? or actually giving a justification?)}. For more details, refer to the appendix. Putting this together, we have
 \begin{align}
 S_{\boldsymbol \lambda} 
 & = 
